--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,4 +1,4 @@
-% include ./partials/header %>
+<% include ./partials/header %>
 <html>
 <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,8 +24,19 @@
 			.topnav a:hover {
 				background-color: #ddd;
 				color: black;
+			}
+
+			.topnav a.active {
+				background-color: #4CAF50;
+				color: white;
+			}
+            .col-sm-10
+            {
+                margin: 15px;
+
             }
-        </style>
+            
+		</style>
 </head>
 <body>
     <div class="topnav">
@@ -47,7 +58,40 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-10">
+        <div class="tab-content">
+                <div id="setalertmode" class="tab-pane fade in active">
+                        <h2>Set Alert Mode</h2>
+                        <form class="form-horizontal" method="post" action="/setalertmode">
+                              <div class="radio">
+                                    <input type="radio" name="setoption" value = "sms" checked>SMS<br>
+                                    <input type="radio" name="setoption" value = "email">mail<br>
+                             </div>
+                        </form>
+                </div>
+                <div id="editalertinginfo" class="tab-pane fade">
+                    <h2>Edit Alerting System Info</h2>
+                    <form class="form-horizontal" method="post" action="/editalertinginfo">
+                        <div class="checkbox" id = "editphnnumber">
+                                <label><input type="checkbox" value="">Edit Phonenumber</label>
+                        </div>
+                        <div class="checkbox" id = "editemail">
+                                <label><input type="checkbox" value="">Edit email</label>
+                        </div>
+                            
+                    </form>
+                </div>
+
+
+
+
+
+
+
+
+        </div>
+    </div>
+</body>
     
     <% include ./partials/footer %>
-    </html>
-    
+</html>
